kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dorkari-toythya
  labels:
    app: dorkari-toythya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dorkari-toythya
  template:
    metadata:
      labels:
        app: dorkari-toythya
    spec:
      containers:
        - name: dorkari-toythya
          image: tangoankur/dorkari-toythya:latest  # Replace with your actual image
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
