kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dorkari-toythya-service
spec:
  selector:
    app: dorkari-toythya
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
