kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dorkari-toythya-ingress
  labels:
    app: dorkari-toythya
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: dorkari-toythya.tangoankur.kubesail.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dorkari-toythya-service
                port:
                  number: 80
